Fix bug create products
