# docs/customer/swagger.yaml
@@ -52,6 +52,21 @@ definitions:
       userName:
         type: string
     type: object
+  response.Brand:
+    properties:
+      createdAt:
+        type: string
+      createdById:
+        $ref: '#/definitions/response.AuditTrail'
+      id:
+        type: integer
+      modifiedAt:
+        type: string
+      modifiedById:
+        $ref: '#/definitions/response.AuditTrail'
+      name:
+        type: string
+    type: object
   response.CustomerInfo:
     properties:
       email:
@@ -198,8 +213,6 @@ definitions:
         $ref: '#/definitions/response.AuditTrail'
       name:
         type: string
-      parentId:
-        type: integer
     type: object
   response.ProductGroupItemResponse:
     properties:
@@ -216,6 +229,8 @@ definitions:
     type: object
   response.ProductResponse:
     properties:
+      brand:
+        $ref: '#/definitions/response.Brand'
       createdAt:
         type: string
       createdById:
@@ -264,13 +279,15 @@ definitions:
         type: array
       sku:
         type: string
+      tags:
+        type: string
+      videoUrl:
+        type: string
     type: object
   response.ProductSku:
     properties:
-      ProductSpecs:
-        items:
-          $ref: '#/definitions/response.ProductSpec'
-        type: array
+      componentTypeId:
+        type: integer
       id:
         type: string
       isActive:
@@ -279,8 +296,16 @@ definitions:
         type: string
       price:
         type: number
+      productGroupItems:
+        items:
+          $ref: '#/definitions/response.ProductGroupItemResponse'
+        type: array
       productId:
         type: string
+      productSpecs:
+        items:
+          $ref: '#/definitions/response.ProductSpec'
+        type: array
       sequence:
         type: integer
       sku:
